# sentiment_analysis

./: .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  README_NEWS_EXTRACTOR.md  client_manager.py  extract_html.py  news.json  news_extractor.py  open_webpage.py  open_x_browser.py  pyproject.toml  ruff.toml  test_2.py  test_integration.py
src/sentiment_analysis/: __init__.py  alpaca_news.py  bitcoin_rss_fetcher.py  client_manager.py  config.toml.example  config_example.toml  config_utils.py  consistency_tester.py  db_utils.py  demo.py  embedding_model.py  google_news.py  google_supervisor.py  logging_utils.py  news.json  news_rss_fetcher.py  parallel_processor.py  pipeline.py  prompt_manager.py  searxng_search.py  sentiment_analyzer.py  sentiment_grapher.py  supervisor.py  telegram_news.py  transformers_test.py  utils.py  vector_search_demo.py
src/sentiment_analysis/a_extra/: timestamp_converter.py
src/sentiment_analysis/consistency_test/: consistency_report.html  consistency_results.json  consistency_summary.csv
src/sentiment_analysis/extra/: news_to_json.py
twitter_auth/: README.md  demo_manual_setup.py  twitter_auth.py
twitter_extraction_comparison/: compare_methods.py  comparison_summary.md  enhancement_summary.md  extract_tweet.py  method1_1_inner_text.txt  method2_2_javascript_evaluation.txt  method3_3_accessibility_tree.txt  method4_4_text_content_cleanup.txt
