[project]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "plomitt",email = "46419727+plomitt@users.noreply.github.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "playwright (>=1.55.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "instructor (>=1.11.3,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
]

[dependency-groups]
dev = [
    "pytest-playwright (>=0.7.1,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
