[project]
name = "sentiment-analysis"
version = "2.0.0"
description = "Bitcoin news sentiment analysis tool with AI-powered insights"
authors = [
    {name = "plomitt",email = "46419727+plomitt@users.noreply.github.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "instructor (>=1.11.3,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "feedparser (>=6.0.12,<7.0.0)",
    "aiohttp (>=3.13.1,<4.0.0)",
    "pydantic (>=2.5.0,<3.0.0)",
    "openai (>=1.0.0,<2.0.0)",
    "psycopg[binary,pool] (>=3.2.12,<4.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "apscheduler (>=3.11.1,<4.0.0)",
]

[project.optional-dependencies]
dev = [
    "black (>=24.0.0,<25.0.0)",
    "isort (>=5.13.0,<6.0.0)",
    "ruff (>=0.7.0,<1.0.0)",
    "mypy (>=1.8.0,<2.0.0)",
    "pre-commit (>=3.6.0,<4.0.0)",
    "types-python-dateutil (>=2.9.0,<3.0.0)",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = "\\.pyi?$"
extend-exclude = """
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
  | temp
)/
"""

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["sentiment_analysis"]
known_third_party = ["instructor", "pydantic", "matplotlib", "pandas", "numpy"]

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "RSE", # flake8-raise
    "Q",   # flake8-quotes
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "S311",  # random number generation
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "ANN401",  # any-type
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
